added twoHands feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,14 +29,17 @@ include_directories(
 )
 
 add_executable(modular_controller src/modular_controller.cpp)
+add_executable(modular_controller_twoHands src/modular_controller_twoHands.cpp)
 add_executable(hand_pose_test src/hand_pose_test.cpp)
 add_executable(gripper_test src/gripper_test.cpp)
 add_executable(servos_test src/servos_test.cpp)
 add_dependencies(modular_controller ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(modular_controller_twoHands ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(hand_pose_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(gripper_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(servos_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(modular_controller ${catkin_LIBRARIES} )
+target_link_libraries(modular_controller_twoHands ${catkin_LIBRARIES} )
 target_link_libraries(hand_pose_test ${catkin_LIBRARIES} )
 target_link_libraries(gripper_test ${catkin_LIBRARIES} )
 target_link_libraries(servos_test ${catkin_LIBRARIES} )
